ObjectUtil.loadClassで配列形式の生成ができない